# UniversalAgenticCompetitionPublic

./: .gitignore  README.md
agent/: agent.py  local_agent.py  run.sh
local_task/bye-file/: instruction.md  task.toml
local_task/bye-file/environment/: Dockerfile
local_task/bye-file/solution/: solve.sh
local_task/bye-file/tests/: test.sh
local_task/find-sqli-login/: instruction.md  task.toml
local_task/find-sqli-login/environment/app/: pyproject.toml
local_task/find-sqli-login/environment/app/routers/: comments.py  items.py
local_task/find-sqli-login/environment/app/tests/: conftest.py
local_task/find-sqli-login/solution/: solve.sh
local_task/find-sqli-login/tests/: test.sh  test_security_report.py
local_task/fix-sqli-login/: instruction.md  task.toml
local_task/fix-sqli-login/environment/: Dockerfile  entrypoint.sh
local_task/fix-sqli-login/solution/: solve.sh
local_task/fix-sqli-login/tests/: test.sh  test_regression.py  test_sqli_login.py
local_task/fix-sqli-search/: instruction.md  task.toml
local_task/fix-sqli-search/environment/: entrypoint.sh
local_task/fix-sqli-search/solution/: solve.sh
local_task/fix-sqli-search/tests/: conftest.py  test_sqli_search.py
local_task/hello-file/: instruction.md  task.toml
local_task/hello-file/solution/: solve.sh
local_task/hello-file/tests/: test.sh
local_task/incident-log-forensics/: instruction.md  task.toml
local_task/incident-log-forensics/environment/: Dockerfile  app_audit_recovered.jsonl  collector_note.txt  dns_ptr_hints.txt
local_task/insecure-api-app/: sync.sh
(+14 files in other folders)
