[project]
name = "insecure-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["routers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
